環境構築文書作成

--- a/index.html
+++ b/index.html
@@ -3,14 +3,34 @@
     <head>
         <meta charset="UTF-8" />
         <title>e-freak</title>
+        <link href="./css/default.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <header>
         </header>
         <main>
-            We are e-freak.
+            <section>
+                <h1>We are e-freak.</h1>
+            </section>
+            <section>
+                <h2>メモ</h2>
+                <ul>
+                    <li class="dotless"><a href="./view/develop.html">環境構築</a></li>
+                    <li class="dotless"><a href="./view/project.html">プロジェクト作成</a></li>
+                </ul>
+            </section>
+            <section>
+                <h2>リンク</h2>
+                <ul>
+                    <li class="dotless"><a href="https://e-freak.slack.com/">Slack</a></li>
+                    <li class="dotless"><a href="https://github.com/e-freak/">Git</a></li>
+                </ul>
+            </section>
         </main>
         <footer>
+            <div id="copyright">
+                Copyright &#169; 2017 e-freak All Rights Reserved.
+            </div>
         </footer>
     </body>
 </html>
