プロジェクト作成文書更新中

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <section>
                 <h2>リンク</h2>
                 <ul>
-                    <li class="dotless"><a href="https://e-freak.slack.com/">Slack</a></li>
-                    <li class="dotless"><a href="https://github.com/e-freak/">Git</a></li>
+                    <li class="dotless"><a href="https://e-freak.slack.com/" target="_blank">Slack</a></li>
+                    <li class="dotless"><a href="https://github.com/e-freak/" target="_blank">Git</a></li>
                 </ul>
             </section>
         </main>
