--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
                 <h1>We are e-freak.</h1>
             </section>
             <section>
-                <h2>メモ</h2>
+                <h1>メモ</h1>
                 <ul>
                     <li class="dotless"><a href="./view/develop.html">環境構築</a></li>
                     <li class="dotless"><a href="./view/project.html">プロジェクト作成</a></li>
+                    <li class="dotless"><a href="./view/git-flow.html">Gitの運用</a></li>
                 </ul>
             </section>
             <section>
-                <h2>リンク</h2>
+                <h1>リンク</h1>
                 <ul>
                     <li class="dotless"><a href="https://e-freak.slack.com/" target="_blank">Slack</a></li>
                     <li class="dotless"><a href="https://github.com/e-freak/" target="_blank">Git</a></li>
