--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 </ul>
             </section>
             <section>
+                <h1>コーディングルール</h1>
+                <ul>
+                    <li class="dotless"><a href="./view/rule-html.html">HTML</a></li>
+                    <li class="dotless"><a href="./view/rule-css.html">CSS</a></li>
+                    <li class="dotless"><a href="./view/rule-js.html">JavaScript</a></li>
+                </ul>
+            </section>
+            <section>
                 <h1>リンク</h1>
                 <ul>
                     <li class="dotless"><a href="https://e-freak.slack.com/" target="_blank">Slack</a></li>
