トランスパイル文書完成

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li class="dotless"><a href="./view/develop.html">環境構築</a></li>
                     <li class="dotless"><a href="./view/project.html">プロジェクト作成</a></li>
                     <li class="dotless"><a href="./view/git-flow.html">Gitの運用</a></li>
+                    <li class="dotless"><a href="./view/transpile.html">トランスパイル</a></li>
                 </ul>
             </section>
             <section>
