ビューの作り方文書作成完了

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li class="dotless"><a href="./view/project.html">プロジェクト作成</a></li>
                     <li class="dotless"><a href="./view/git-flow.html">Gitの運用</a></li>
                     <li class="dotless"><a href="./view/transpile.html">トランスパイル</a></li>
+                    <li class="dotless"><a href="./view/knowledge01.html">ビューの作り方</a></li>
                 </ul>
             </section>
             <section>
